Ticket #14995 (closed defect: fixed)

Opened 5 months ago

Last modified 4 months ago

Double clicking on wxAuiNotebook tabbar background doesn't create the tab at the good location

Reported by: R.U.10 Owned by: vadz
Priority: normal Milestone: 2.9.5
Component: wxAui Version: 2.9-svn
Keywords: wxAuiNotebook double click wxAuiTabCtrl Cc:
Blocked By: Patch: yes
Blocking:

Description

With the joined patch, when double clicking on the tabbar background of a tiled wxAuiNotebook, a call to AddPage() will create the new tab in the wxAuiTabCtrl on which the user has double clicked and not near the last selected tab (which can potentially be placed on an other wxAuiTabCtrl).

Attachments

auibook.cpp.patch download (0.9 KB) - added by R.U.10 5 months ago.
OnTabBgDClick correction

Change History

Changed 5 months ago by R.U.10

OnTabBgDClick correction

Changed 4 months ago by vadz

  • owner set to vadz
  • status changed from new to accepted

I actually don't know how to test this exactly but I'll apply it, please let me know if anybody finds a problem with this.

Changed 4 months ago by VZ

  • status changed from accepted to closed
  • resolution set to fixed

(In [73490]) Create new tab at the correct location in wxAuiNotebook.

Create the new tab in wxAuiTabCtrl that was double clicked and not near the
last selected tab which could have been in another wxAuiTabCtrl.

Closes #14995.

Note: See TracTickets for help on using tickets.